# yt-transcript-to-notes

./: .env  README.md  main.py  pyproject.toml
notebooks/: output.md  whisper_pipeline.ipynb
